Fixed the wrong number of arguments for rgb.

--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -4,18 +4,18 @@ $color-secondary: rgb(237, 186, 17);
 $color-headline-header: rgb(54, 70, 72);
 $color-background-primary: rgb(229, 229, 229);
 $color-text-base: rgb(72, 72, 72);
-$color-text-secondary: rgb(72,72,72, 0.85);
-$color-text-large-button: rgb(72, 72, 72, 0.9);
-$color-text-placeholder: rgb(72,72,72, 0.60);
-$color-success: rgb(123, 203, 68, 0.9);
-$color-loading: rgb(6, 43, 98, 0.75);
-$color-alert: rgb(237, 186, 17, 0.86);
-$color-danger-action: rgb(165, 9, 9, 0.86);
+$color-text-secondary: rgba(72,72,72, 0.85);
+$color-text-large-button: rgba(72, 72, 72, 0.9);
+$color-text-placeholder: rgba(72,72,72, 0.60);
+$color-success: rgba(123, 203, 68, 0.9);
+$color-loading: rgba(6, 43, 98, 0.75);
+$color-alert: rgba(237, 186, 17, 0.86);
+$color-danger-action: rgba(165, 9, 9, 0.86);
 $color-large-button-primary: rgb(237, 186, 17);
 $color-choice-button-enabled: rgba(255, 255, 255, 0.95);
 $color-choice-button-disabled: rgba(255, 255, 255, 0.80);
 $color-element-shadow: rgba(72, 72, 72, 0.25);
-$color-icon-primary: rgb(255,255,255, 0.96);
-$color-icon-secondary: rgb(72,72,72, 0.85);
+$color-icon-primary: rgba(255,255,255, 0.96);
+$color-icon-secondary: rgba(72,72,72, 0.85);
 $color-icon-visibility: rgba(0, 0, 0, 0.54);
 $color-vector-field: rgba(255, 255, 255, 0.7);
