--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -4,8 +4,10 @@ $color-secondary: rgb(237, 186, 17);
 $color-headline-header: rgb(54, 70, 72);
 $color-background-primary: rgb(250, 250, 250);
 $color-text-base: rgb(72, 72, 72);
+$color-text-negative: rgb(250, 250, 250);
 $color-text-secondary: rgba(72,72,72, 0.85);
-$color-text-large-button: rgba(72, 72, 72, 0.9);
+$color-text-enabled-button: rgba(72, 72, 72, 0.9);
+$color-text-disabled-button: rgba(72, 72, 72, 0.7);
 $color-text-placeholder: rgba(72,72,72, 0.60);
 $color-success: rgba(123, 203, 68, 0.9);
 $color-loading: rgba(6, 43, 98, 0.75);
