--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,1 +1,4 @@
+@import './../../theme/colors.scss';
+
 $font-family-primary: 'Montserrat', sans-serif;
+$box-shadow: 0px 4px 4px $color-element-shadow;
