Login page view created, buttonlarge adjustments & changepassw path added to router

--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -2,7 +2,7 @@ $color-primary: rgb(92, 198, 208);
 $color-title-bar: rgb(108, 204, 213);
 $color-secondary: rgb(237, 186, 17);
 $color-headline-header: rgb(54, 70, 72);
-$color-background-primary: rgb(250, 250, 250);
+$color-background-primary: rgb(250, 250, 245);
 $color-text-base: rgb(72, 72, 72);
 $color-text-negative: rgb(250, 250, 250);
 $color-text-secondary: rgba(72,72,72, 0.85);
@@ -21,3 +21,5 @@ $color-icon-primary: rgba(255,255,255, 0.96);
 $color-icon-secondary: rgba(72,72,72, 0.85);
 $color-icon-visibility: rgba(0, 0, 0, 0.54);
 $color-vector-field: rgba(255, 255, 255, 0.7);
+$color-menu-background: rgba(72, 72, 72, .80);
+$color-menu-items-hover: rgba(0, 0, 0, 0.30);
