--- a/src/components/ButtonLarge/ButtonLarge.scss
+++ b/src/components/ButtonLarge/ButtonLarge.scss
@@ -8,18 +8,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: relative;
-    margin: auto;
     width: 85%;
     height: 52px;
-    top: 9%;
-    bottom: 6.8%;
     outline: none;
     cursor: pointer;
     background: $color-large-button-primary;
     box-shadow: 0px 4px 4px $color-element-shadow;
-
     border-radius: 6px;
+    &:hover, :active{
+      transform: scale(0.95);
+    }
   }
   &__text{
     font-family: "Montserrat";
@@ -30,7 +28,4 @@
     color: $color-text-enabled-button;
     text-transform: capitalize;
   }
-}
-button:hover, :active{
-  transform: scale(0.995);
 }
