New MainMenu and MainHeader components added, modification on admin and host pages, adding breakpoints and necessary color variables, as well as deleting unnecessary images

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,3 +2,8 @@
 
 $font-family-primary: 'Montserrat', sans-serif;
 $box-shadow: 0px 4px 4px $color-element-shadow;
+
+// Breakpoints
+$tablet-min:   768px;
+/*$laptop-min:   992px;*/
+$desktop-min: 1200px;
