change password page and footer component created

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,7 @@
 @import './../../theme/colors.scss';
 
 $font-family-primary: 'Montserrat', sans-serif;
+$font-family-footer: 'Roboto', sans-serif;
 $box-shadow: 0px 4px 4px $color-element-shadow;
 
 // Breakpoints
