Notfoundpage & ButtonLarge style fixes

--- a/src/components/ButtonLarge/ButtonLarge.scss
+++ b/src/components/ButtonLarge/ButtonLarge.scss
@@ -8,7 +8,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 85%;
+    min-width: 85%;
     height: 52px;
     outline: none;
     cursor: pointer;
