--- a/src/pages/NotFoundPage/index.scss
+++ b/src/pages/NotFoundPage/index.scss
@@ -2,132 +2,92 @@
 @import './../../theme/variables.scss';
 @import './../../theme/globals.scss';
 
-.has-text-base {
-  color: $color-text-base
-}
-
-.size-h3 {
-  display: block;
-  font-size: 1.17em;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: bold;
-}
-
-.LoginHeader{
+.NotFoundWrapper{
   display: flex;
   flex-direction: column;
   background-size: cover;
   background-image: url("../../theme/images/body_360x478.png");
   background-repeat: no-repeat;
   min-width: 414px;;
-  height: 552px;
-}
-
-.LoginHeaderContent{
-  justify-content: space-evenly;
-  margin-top: 32px;
-  display: flex;
-  height: 80px;
-  align-items: center;
-  margin-left: 11px;
-
-  &-logo{
-    height: 70px;
+  height: 551px;
+  &-header{
+    justify-content: space-evenly;
+    margin-top: 7%;
+    display: flex;
+    height: 80px;
+    align-items: center;
+    &-logo{
+      height: 75px;
+    }
   }
-
-  &-text{
-    font-size: 1.6em; 
+  &-content{
+    margin-top: 12%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    padding-bottom: 60px;
+    font-weight: bolder;
+    &-backHome{
+      width:auto;
+      color: $color-text-secondary;
+      &:hover, :active{
+        font-weight: 500;
+      }
+    }
+  }
+  &-message{
+    margin: 1em auto;
+    font-size: 1.15em;
+    text-align: center;
     color: $color-text-negative;
   }
-}
-
-.NotFoundContent{
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-  align-items: center;
-  color: $color-icon-primary;
-  margin-left: 65px;
-  height: 400px;
-  width: 300px;
-}
-
-//Mui override
-div.MuiInput{
-  &-underline{
-    border-bottom: $color-icon-primary;
-
-    &:before{
-      border-bottom-color: $color-icon-primary;
-    }
-    &:after{
-      border-bottom-color: $color-icon-primary;
-    }
-
+  &-image{
+    width: 90%;
   }
-  &-underline:hover:not(.Mui-disabled):before{
-    border-bottom-color: $color-icon-primary;
-  }
-}
-div.MuiInputBase-root{
-  color: $color-text-base;
-  font-family: $font-family-primary;
-  font-weight: 500;
-}
-//END-Mui override
-
-.LoginFooter{
-  display: flex;
-  position: absolute;
-  justify-content: center;
-  bottom: 0;
-  min-width: 415px;
-
-  &-logo{
-    bottom: 0;
-    width: 80px;
-    height: 116px;
-  }
-
 }
 
 //Media query's
 //Desktop
-@media screen and (min-width: 992px){
-  .LoginHeader{
+@media screen and (min-width: $tablet-min){
+  .NotFoundWrapper{
+    &-header{
+      height: auto;
+      margin-top: 7%;
+      &-logo{
+        height: 80px;
+      }
+    }
+    &-content{
+      width: 400px;
+    }
+    &-image{
+      margin-top: 2em;
+    }
+  }
+} 
+@media screen and (min-width: $desktop-min){
+  .NotFoundHeader{
     background-image: url("../../theme/images/body_1366x768px.png");
-    min-width: 100vw;
-    height: 100vh;
   }
-  .LoginHeaderContent{
-    height: 300px;
-
-    &-logo{
-      height: 90px;
+  .NotFoundWrapper{
+    &-header{
+      height: 260px;
+      align-items: center;
+      margin-top: 6%;
+      &-logo{
+        height: 90px;
+      }
     }
-  
-    &-text{
-        font-size: 4.2em;
+    &-content{
+      margin-top: 5%;
+      padding-bottom: 200px;
     }
-  }
-
-  .NotFoundContent{
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  div.MuiGrid-container{
-    justify-content: center;
-  }
-  .LoginFooter{
-    &-logo{
-      width: 120px;
-      height: 164px;
-      margin-right: 230px;
-    } 
+    &-image{
+      margin-top: 3em;
+    }
   }
 }
