--- a/src/components/ButtonLarge/ButtonLarge.scss
+++ b/src/components/ButtonLarge/ButtonLarge.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     min-width: 85%;
-    height: 52px;
+    min-height: 52px;
     outline: none;
     cursor: pointer;
     background: $color-large-button-primary;
@@ -24,7 +24,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 1.4em;
-    line-height: .5em;
+    line-height: normal;
     color: $color-text-enabled-button;
     text-transform: capitalize;
   }
