--- a/src/components/TabsNavBar/TabsNavBar.scss
+++ b/src/components/TabsNavBar/TabsNavBar.scss
@@ -1,12 +1,11 @@
 @import '../../theme/globals.scss';
 
-.PrivateTabIndicator-colorSecondary-104{
-  &.MuiTabs-indicator{
-    background-color: rgba(237, 186, 17, 0.86);
-  }
-}
 .MuiTab{
   &-wrapper{
     font-family: $font-family-primary;
   }
+}
+
+.tabIndicator.color{
+    background-color:rgba(237, 186, 17, 0.86);
 }
